--- a/package.json
+++ b/package.json
@@ -1,32 +1,53 @@
 {
-  "name": "adbkit-monkey",
+  "name": "auto-tools",
   "version": "1.0.0",
-  "description": "",
+  "description": "Auto Tools",
   "main": "server.js",
   "scripts": {
+    "prepare": "husky",
+    "host": "node src/server.js & node src/localtunnel.js && fg",
     "app": "node src/server.js",
     "build": "webpack --mode=development --watch",
-    "release": "webpack --mode=production"
+    "release": "webpack --mode=production",
+    "commit": "git-cz"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "Khu Vuon Tren May",
+    "Auto Tools"
+  ],
+  "author": "conganhhcmus",
   "license": "ISC",
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
+  },
+  "dependencies": {
+    "adbkit": "^2.11.1",
+    "bluebird": "^3.7.2",
+    "buffer": "^6.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jimp": "^0.22.10",
+    "localtunnel": "^2.0.2",
+    "moment": "^2.30.1",
+    "opencv-wasm": "^4.3.0-10"
+  },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-react": "^7.23.3",
-    "adbkit": "^2.0.17",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
+    "@commitlint/cz-commitlint": "^18.6.0",
     "antd": "^5.12.7",
     "axios": "^1.6.4",
     "babel-loader": "^9.1.3",
-    "bluebird": "^3.7.2",
+    "commitizen": "^4.3.0",
     "css-loader": "^6.8.1",
-    "express": "^4.18.2",
     "html-webpack-plugin": "^5.6.0",
-    "jimp": "^0.22.10",
+    "husky": "^9.0.10",
     "mini-css-extract-plugin": "^2.7.6",
-    "moment": "^2.29.4",
-    "opencv-wasm": "^4.3.0-10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "terser-webpack-plugin": "^5.3.10",
