--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "prepare": "husky",
-    "host": "node src/server.js & node src/localtunnel.js && fg",
+    "all-server": "concurrently \"npm run app\" \"npm run host\"",
+    "host": "node src/localtunnel.js",
     "app": "node src/server.js",
     "build": "webpack --mode=development --watch",
     "release": "webpack --mode=production",
@@ -44,6 +45,7 @@
     "axios": "^1.6.4",
     "babel-loader": "^9.1.3",
     "commitizen": "^4.3.0",
+    "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.10",
