--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "server.js",
   "scripts": {
     "prepare": "husky",
-    "all-server": "concurrently \"npm run app\" \"npm run host\"",
-    "host": "node src/localtunnel.js",
     "app": "node src/server.js",
     "build": "webpack --mode=development --watch",
     "release": "webpack --mode=production",
@@ -24,15 +22,14 @@
     }
   },
   "dependencies": {
-    "adbkit": "^2.11.1",
+    "@devicefarmer/adbkit": "^3.2.6",
     "bluebird": "^3.7.2",
     "buffer": "^6.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-ws": "^5.0.2",
-    "jimp": "^0.22.10",
+    "jimp": "^0.22.12",
     "jmuxer": "^1.1.1",
-    "localtunnel": "^2.0.2",
     "moment": "^2.30.1",
     "opencv-wasm": "^4.3.0-10"
   },
@@ -47,7 +44,6 @@
     "axios": "^1.6.4",
     "babel-loader": "^9.1.3",
     "commitizen": "^4.3.0",
-    "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.6.0",
