--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "description": "Auto Tools",
   "scripts": {
     "prepare": "husky",
+    "appium": "appium --base-path /wd/hub",
     "app": "node src/server.js",
     "build": "webpack --mode=development --watch",
     "release": "webpack --mode=production",
+    "all": "npm-run-all --parallel appium app",
     "commit": "git-cz"
   },
   "keywords": [
@@ -21,6 +23,7 @@
   },
   "dependencies": {
     "@devicefarmer/adbkit": "^3.2.6",
+    "appium": "^2.10.3",
     "bluebird": "^3.7.2",
     "buffer": "^6.0.3",
     "express": "^4.18.2",
@@ -29,7 +32,9 @@
     "jimp": "^0.22.12",
     "jmuxer": "^1.1.1",
     "moment": "^2.30.1",
-    "opencv-wasm": "^4.3.0-10"
+    "npm-run-all": "^4.1.5",
+    "opencv-wasm": "^4.3.0-10",
+    "webdriverio": "^8.39.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
@@ -39,6 +44,7 @@
     "@commitlint/config-conventional": "^18.6.0",
     "@commitlint/cz-commitlint": "^18.6.0",
     "antd": "^5.12.7",
+    "appium-uiautomator2-driver": "^3.5.4",
     "axios": "^1.6.4",
     "babel-loader": "^9.1.3",
     "commitizen": "^4.3.0",
