--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Auto Tools",
   "scripts": {
     "prepare": "husky",
-    "appium": "appium --log-level error --base-path /wd/hub",
+    "appium": "appium -pa /wd/hub --log-timestamp --local-timezone --log-no-colors --log-level error:warn --log ./log/appium.txt",
     "app": "node src/server.js",
     "build": "webpack --mode=development --watch",
     "release": "webpack --mode=production",
@@ -23,10 +23,10 @@
   },
   "dependencies": {
     "@devicefarmer/adbkit": "^3.2.6",
-    "appium": "^2.10.3",
+    "appium": "^2.11.1",
     "bluebird": "^3.7.2",
     "buffer": "^6.0.3",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-ws": "^5.0.2",
     "jimp": "^0.22.12",
@@ -37,28 +37,28 @@
     "webdriverio": "^8.39.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.6",
-    "@babel/preset-env": "^7.24.6",
-    "@babel/preset-react": "^7.23.3",
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@commitlint/cz-commitlint": "^18.6.0",
-    "antd": "^5.12.7",
-    "appium-uiautomator2-driver": "^3.5.4",
-    "axios": "^1.6.4",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/cz-commitlint": "^19.2.0",
+    "antd": "^5.18.3",
+    "appium-uiautomator2-driver": "^3.7.0",
+    "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
     "commitizen": "^4.3.0",
-    "css-loader": "^6.8.1",
-    "css-minimizer-webpack-plugin": "^6.0.0",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "husky": "^9.0.10",
-    "mini-css-extract-plugin": "^2.7.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "husky": "^9.0.11",
+    "mini-css-extract-plugin": "^2.9.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "terser-webpack-plugin": "^5.3.10",
-    "webpack": "^5.89.0",
+    "webpack": "^5.92.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.0.4"
   }
 }
