--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Auto Tools",
   "scripts": {
     "prepare": "husky",
-    "appium": "appium --log-timestamp --local-timezone --log-no-colors --log-level error:warn --log ./log/appium.txt",
+    "appium": "appium --base-path=/wd/hub --log-timestamp --local-timezone --log-no-colors --log-level error:warn --log ./log/appium.txt",
     "app": "node src/server.js",
     "build": "webpack --mode=development --watch",
     "release": "webpack --mode=production",
@@ -22,7 +22,8 @@
     }
   },
   "dependencies": {
-    "appium": "^2.11.1",
+    "appium": "^2.11.3",
+    "axios": "^1.7.5",
     "bluebird": "^3.7.2",
     "buffer": "^6.0.3",
     "express": "^4.19.2",
@@ -33,7 +34,7 @@
     "moment": "^2.30.1",
     "npm-run-all": "^4.1.5",
     "opencv-wasm": "^4.3.0-10",
-    "webdriverio": "^8.39.0"
+    "webdriverio": "^9.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
@@ -43,8 +44,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/cz-commitlint": "^19.2.0",
     "antd": "^5.18.3",
-    "appium-uiautomator2-driver": "^3.7.4",
-    "axios": "^1.7.2",
+    "appium-uiautomator2-driver": "^3.7.7",
     "babel-loader": "^9.1.3",
     "commitizen": "^4.3.0",
     "css-loader": "^7.1.2",
