--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "app": "node src/server.js",
     "build": "webpack --mode=development --watch",
     "release": "webpack --mode=production",
-    "all": "npm-run-all --parallel appium app",
+    "start": "pm2 start npm --name 'appium' -- run appium && pm2 start npm --name 'auto-tool' -- run app",
+    "monitor": "pm2 monit",
+    "restart": "pm2 restart all",
+    "stop": "pm2 stop all",
+    "clear": "pm2 delete all",
     "commit": "git-cz"
   },
   "keywords": [
@@ -23,7 +27,7 @@
   },
   "dependencies": {
     "appium": "^2.12.1",
-    "axios": "^1.7.5",
+    "axios": "^1.7.8",
     "bluebird": "^3.7.2",
     "buffer": "^6.0.3",
     "express": "^4.19.2",
@@ -32,9 +36,9 @@
     "jimp": "^0.22.12",
     "jmuxer": "^1.2.0",
     "moment": "^2.30.1",
-    "npm-run-all": "^4.1.5",
     "opencv-wasm": "^4.3.0-10",
-    "webdriverio": "^9.2.14"
+    "pm2": "^5.4.3",
+    "webdriverio": "^9.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -43,8 +47,8 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@commitlint/cz-commitlint": "^19.5.0",
-    "antd": "^5.22.1",
-    "appium-uiautomator2-driver": "^3.9.0",
+    "antd": "^5.22.2",
+    "appium-uiautomator2-driver": "^3.9.1",
     "babel-loader": "^9.2.1",
     "commitizen": "^4.3.1",
     "css-loader": "^7.1.2",
